--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -60,7 +60,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="92dp"
-        android:background="@android:color/holo_green_light"
+        android:background="@drawable/rounded_shape"
         android:text="@string/save"
         android:textColor="@android:color/background_light"
         android:textStyle="bold"
@@ -71,5 +71,6 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp" />
+        android:layout_marginEnd="8dp"
+        style="@style/AppTheme.RoundedCornerMaterialButton"/>
 </android.support.constraint.ConstraintLayout>
