--- a/app/src/main/res/layout/popup.xml
+++ b/app/src/main/res/layout/popup.xml
@@ -59,15 +59,18 @@
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
-            android:background="@android:color/holo_green_light"
+            android:background="@drawable/rounded_shape"
             android:text="@string/save"
             android:textColor="@android:color/background_light"
             android:textStyle="bold"
+            android:textSize="18sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/popEnterAssignedBy" android:ellipsize="none"
+            app:layout_constraintTop_toBottomOf="@+id/popEnterAssignedBy"
+            style="@style/AppTheme.RoundedCornerMaterialButton"
+
     />
 </android.support.constraint.ConstraintLayout>
